src/objects/Audit_Report__c.object
<CustomObject>
    <fields>
        <fullName>CFDA_Numbers_Not_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CFDA Numbers Not Correct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPA_Audited_TxDOT_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPA Audited TxDOT Funds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPA_Name__c</fullName>
        <label>CPA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Review_Comments__c</fullName>
        <label>Desk Review Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <formula>Sub_Recipient_Entity__r.Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAC_Accepted_Date__c</fullName>
        <label>FAC Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Findings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Findings?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Control_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Control Issues?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Implementation_Date__c</fullName>
        <label>Latest Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mgmt_Decision_Letter_Date__c</fullName>
        <label>Mgmt Decision Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_prior_TxDOT_Finding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outstanding prior TxDOT Finding?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Questioned_Costs__c</fullName>
        <label>Questioned Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Report_FY__c</fullName>
        <label>Report FY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Received_Date__c</fullName>
        <label>Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Reviewed_Date__c</fullName>
        <label>Report Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Reviewed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_Checked_By__c</fullName>
        <label>Spot Checked By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Recip_TXDOT_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sub Recip TXDOT Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Recipient_Entity__c</fullName>
        <label>Sub Recipient Entity</label>
        <referenceTo>Sub_Recipient_Entity__c</referenceTo>
        <relationshipLabel>Audit Reports</relationshipLabel>
        <relationshipName>Audit_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TxDOT_Divisions_Federal__c</fullName>
        <label>TxDOT Divisions - Federal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PTN</fullName>
                </value>
                <value>
                    <fullName>LGP</fullName>
                </value>
                <value>
                    <fullName>TRF</fullName>
                </value>
                <value>
                    <fullName>RRD</fullName>
                </value>
                <value>
                    <fullName>AVN</fullName>
                </value>
                <value>
                    <fullName>TPP</fullName>
                </value>
                <value>
                    <fullName>02-TPP</fullName>
                </value>
                <value>
                    <fullName>24-TPP</fullName>
                </value>
                <value>
                    <fullName>18-TPP</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>DAL</fullName>
                </value>
                <value>
                    <fullName>OCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TxDOT_Divisions_State__c</fullName>
        <label>TxDOT Divisions - State</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PTN</fullName>
                </value>
                <value>
                    <fullName>AVN</fullName>
                </value>
                <value>
                    <fullName>LGP</fullName>
                </value>
                <value>
                    <fullName>DAL</fullName>
                </value>
                <value>
                    <fullName>Airport Main</fullName>
                </value>
                <value>
                    <fullName>TRF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TxDOT_Fed_P_T_Expenses__c</fullName>
        <label>TxDOT Fed P-T Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TxDOT_State_Expenses__c</fullName>
        <label>TxDOT State Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Under_Federal_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under Federal Threshold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_State_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Under State Threshold?</label>
        <type>Checkbox</type>
    </fields>
    <label>Audit Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_FY__c</columns>
        <columns>Report_Reviewed_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CPA_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Audit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>